# inflation-resistant-stablecoin

./: An Inflation-Resistant Stablecoin-backed Stablecoin.docx  README.md  TestResults.md
drawings/: HowTheIRMASystemWorks.txt  IRMABusinessCase.txt  irma-flower.html  irma-in-circles.html  irma-with-seven-circles.html
irma/: .env.example  Anchor.toml  Cargo.toml  devnet-config.json  install  package-lock.json  package.json  tsconfig.json
irma/.github/: copilot-instructions.md
irma/programs/commons/: Cargo.toml
irma/programs/commons/src/: account_filters.rs  constants.rs  lib.rs  pda.rs  quote.rs  seeds.rs  token_2022.rs
irma/programs/commons/src/conversions/: token_program_flag.rs
irma/programs/commons/src/extensions/: bin.rs  bin_array.rs  bin_array_bitmap.rs  lb_pair.rs  position.rs
irma/programs/commons/src/math/: utils.rs
irma/programs/commons/tests/integration/: main.rs  test_swap.rs  test_swap_token2022.rs
irma/programs/commons/tests/integration/helpers/: utils.rs
irma/programs/commons/tests/on_chain/: Cargo.toml  main.rs  mod.rs  mod_test.rs  test_swap.rs  test_swap_token2022.rs  utils.rs
irma/programs/irma/: Cargo.toml
irma/programs/irma/idls/: irma_parsed.json  openbook_v2.json  openbook_v2_fetched.json  openbook_v2_min.json  readme.txt
irma/programs/irma/src/: bin_array_manager.rs  crank_market.rs  errors.rs  iopenbook.rs  lib.rs  meteora_integration.rs  orca_integration.rs  pair_config.rs  position_manager.rs  pricing.rs  protocol_state.rs  utils.rs
irma/programs/irma/tests/: libtest.rs  meteora_integration.rs  unit.rs
irma/tests/: add_reserve.ts  connect_lb_pair.ts  devnet_protocol_test.ts  inflation_resistance_simple.ts  inflation_resistance_test.ts  irma.ts  orca_integration_test.ts  read_protocol_state.ts
openbook-v2-ui/: package-lock.json  package.json
openbook-v2-ui/hooks/: VirtualWallet.ts
openbook-v2-ui/openbook/utils/: utils.ts
openbook-v2-ui/utils/: openbook.ts
